--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.0.11",
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.0-beta.17",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
-        "postcss": "^8.1.14",
+        "postcss": "^8.2.13",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "tailwindcss": "^2.1.2",
         "vue": "^3.0.11",
         "vue-loader": "^16.2.0",
         "vue-router": "^4.0.6"
